--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <!-- input -->
 
 <h2 class="mt-5 mb-5">
-  Awesome form
+  Awesome form.
+  <small class=""> ng2-trim-directive</small>
+  <a href="https://www.npmjs.com/package/ng2-trim-directive">
+    <img src="https://img.shields.io/npm/v/ng2-trim-directive.svg" alt="">
+  </a>
 </h2>
 
 <form novalidate [formGroup]="exampleForm" class="mx-auto">
